# photometricRefinement

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
bestViewsToBeCompared/: CMakeLists.txt
bestViewsToBeCompared/cmake/modules/: FindGLFW.cmake  FindSOIL.cmake
bestViewsToBeCompared/include/: AngleProgram.h  CameraChooser.h  CollectAngleProgram.h  CoverageProgram.h
bestViewsToBeCompared/src/: AngleProgram.cpp  CameraChooser.cpp  CollectAngleProgram.cpp  CoverageProgram.cpp
bestViewsToBeCompared/test/: Main.cpp  TestPreviousBestCameras.cpp  TestPreviousBestCameras.h
config/: configDatasetCastle.conf
data/castle/camerasP/: 0000.png.P  0001.png.P  0002.png.P  0003.png.P  0004.png.P  0005.png.P  0006.png.P  0007.png.P  0008.png.P  0009.png.P  0010.png.P  0011.png.P  0012.png.P  0013.png.P  0014.png.P  0015.png.P  0016.png.P  0017.png.P  0018.png.P  0019.png.P  0020.png.P  0021.png.P  0022.png.P  0023.png.P  0024.png.P  0025.png.P  0026.png.P  0027.png.P  0028.png.P  0029.png.P
include/photometricRefinement/: Configurator.h  MeshSubdivider.h  MeshSubdividerPolyMesh.h  PhotometricRefinement.h  Subdivider.h  SurfaceEvolver.h
include/photometricRefinement/misc/: Exceptions.hpp  MeshBuilder.h  OpenMvgParser.h  typesRefinement.hpp  utilities.hpp
include/photometricRefinement/subdivider/: CheckReprojAreaProgram.h  MeshSubdivider.h  PolySubdivider.h  PolySubdividerOpenGl.h
include/test/: TestMeshSubdivision.h
shaders/: check_repr_area_fragment_shader.glsl  check_repr_area_geometry_shader.glsl  check_repr_area_vertex_shader.glsl  depth_fragment_shader.glsl  depth_vertex_shader.glsl
src/: Configurator.cpp  MeshSubdivider.cpp  MeshSubdividerPolyMesh.cpp  PhotometricRefinement.cpp  PolySubdivider.cpp  Subdivider.cpp  SurfaceEvolver.cpp
src/misc/: OpenMvgParser.cpp  utilities.cpp
src/subdivider/: CheckReprojAreaProgram.cpp  PolySubdivider.cpp  PolySubdividerOpenGl.cpp
test/: Main.cpp  TestMeshSubdivision.cpp
